<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mvp.view.ui.fragment.ArrivingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/arriving_text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/arriving_title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arriving_client_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arriving_text_view_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arriving_edit_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/text_supplier"
                android:text="@string/rinstroy" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arriving_edit_stairs_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"


            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arriving_client_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arriving_edit_stairs_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_stairs_frame"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arriving_edit_pass_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arriving_edit_stairs_frame_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arriving_edit_pass_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_pass_frame"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arriving_edit_diagonal_connection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arriving_edit_pass_frame_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arriving_edit_diagonal_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_diagonal_connection"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arriving_edit_horizontal_connection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arriving_edit_diagonal_connection_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arriving_edit_horizontal_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_horizontal_connection"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arriving_edit_crossbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arriving_edit_horizontal_connection_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arriving_edit_crossbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_crossbar"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arriving_edit_deck_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arriving_edit_crossbar_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arriving_edit_deck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_deck"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arriving_supports_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arriving_edit_deck_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arriving_edit_supports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_supports"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_send_arriving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ic_calc_launch"
            android:fontFamily="@font/roboto"
            android:text="@string/arriving_button_text"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arriving_supports_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>