<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mvp.view.ui.fragment.JunkFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/junk_text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/junk_title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/junk_text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="16dp"


            android:text="@string/junk_description"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_text_view_title">


        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"


            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_text_description">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/text_date" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_stairs_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_date_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_stairs_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_stairs_frame"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_pass_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_stairs_frame_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_pass_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_pass_frame"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_diagonal_connection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_pass_frame_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_diagonal_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_diagonal_connection"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_horizontal_connection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_diagonal_connection_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_horizontal_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_horizontal_connection"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_crossbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_horizontal_connection_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_crossbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_crossbar"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_deck_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_crossbar_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_deck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_deck"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_supports_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_deck_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_supports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_supports"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_stairs_frame_bad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_supports_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_stairs_frame_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_stairs_frame_bad"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_pass_frame_bad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_stairs_frame_bad_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_pass_frame_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_pass_frame_bad"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_diagonal_connection_bad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_pass_frame_bad_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_diagonal_connection_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_diagonal_connection_bad"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_horizontal_connection_bad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_diagonal_connection_bad_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_horizontal_connection_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_horizontal_connection_bad"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_crossbar_bad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_horizontal_connection_bad_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_crossbar_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_crossbar_bad"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_edit_deck_bad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_crossbar_bad_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_deck_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_deck_bad"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/junk_supports_bad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_edit_deck_bad_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/junk_edit_supports_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_supports_bad"
                android:inputType="number"
                  />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_send_junk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ic_calc_launch"
            android:fontFamily="@font/roboto"
            android:text="@string/junk_button_send"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/junk_supports_bad_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
        <FrameLayout
            android:id="@+id/junk_loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundMain"
            android:visibility="gone"
            tools:visibility="gone"
            >

            <ProgressBar
                android:id="@+id/junk_progress_bar"
                style="?android:attr/progressBarStyle"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"

                />
        </FrameLayout>

    </FrameLayout>

</ScrollView>